hphp/test/slow/types/scalar_force_hh.php.expectf
--- CORRECT USAGE ---
string(3) "123"
int(123)
float(1.23)
bool(true)
resource(1) of type (stream)
string(4) "herp"
int(123)
int(123)
float(1.23)
string(3) "123"
int(123)
float(1.23)
bool(true)
resource(1) of type (stream)
string(4) "herp"
int(123)
int(123)
float(1.23)
--- INCORRECT USAGE ---

Fatal error: Class undefined: HH\string in %s/test/slow/types/scalar_force_hh.php on line 64